--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<meta name="author" content="yaozeye.github.io" />
 		<meta name="Copyright" content="Copyright yaozeye.github.io All Rights Reserved." />
 		<meta name="MSSmartTagsPreventParsing" content="true" />
+		<meta http-equiv="x-dns-prefetch-control" content="on" />
+		<link rel="dns-prefetch" href="//github.com" />
 		<link rel="stylesheet" href="common/init.css" />
 		<link rel="stylesheet" href="common/divcolor.css" />
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
@@ -21,11 +23,10 @@
 	</head>
 	<body>
 		<h1 style="text-shadow: 1px 15px 45px #993300;"><i><b>YaozeYE Personal Page</b></i></h1><hr />
-		<h2 style="font-size:45px;color:white;text-shadow: 3px 12px 80px #FFFFFF;"><i><b>Merry<br />Christmas<br />2018</b></i></h2>
-		<p><a href="weeklymusic.html" style="text-decoration:none;"><input id="h-caps-red" type="button" value="Music"></input></a><br /></p>
+		<h2 style="font-size:45px;color:white;text-shadow: 3px 12px 80px #FFFFFF;"><i><b>Happy<br />New<br />Year<br />2019</b></i></h2>
+		<p><a href="weeklymusic.html" style="text-decoration:none;" rel="external"><input id="h-caps-red" type="button" value="Music"></input></a><br /></p>
 		<!--Function Link-->
 		<p style="font-size:2em;color:grey;"><i>------Function Module------</i><br /></p>
-		
 		<p><a href="https://yaozeye.github.io/Physics301-1619.html" style="font-size:1.5em;color:#00A1D6;" rel="external">physics301-1619-aki-review-1st-video</a><br /></p>
 		<p><a href="page-loading-effects/index.html" style="font-size:1.5em;color:#1212BD;" rel="external">page-loading-effects(HTML5)</a><br /></p>
 		<p><a href="grid-effect/index.html" style="font-size:1.5em;color:#3498DB;" rel="external">grid-effect(HTML5)</a><br /></p>
@@ -36,16 +37,16 @@
 		<p><a href="simulation/physics/circuit-construction-kit-dc_en/circuit-construction-kit-dc_en.html" style="font-size:1.5em;color:#FFFFFF;" rel="external">circuit-construction-kit-dc(HTML5)</a><br /></p>
 		<p><a href="simulation/physics/circuit-construction-kit-ac_en.jar" style="font-size:1.5em;color:#FFFFFF;" rel="external">circuit-construction-kit-ac(JAVA)</a><br /></p>
 		
-		<p><a href="webgl-clouds.html" style="font-size:1.5em;color:#326696;">webgl-clouds(HTML5)</a><br /></p>
-		<p><a href="crazy.html" style="font-size:1.5em;color:purple;">crazy-tentacles(HTML5)</a><br /></p>
-		<p><a href="Demo1.html" style="font-size:1.5em;color:red;">page-preloading(HTML5)</a><br /></p>
-		<p><a href="ball.html" style="font-size:1.5em;color:black;">ball-pool(HTML5)</a><br /></p>
-		<p><a href="textillate.html" style="font-size:1.5em;color:white;">textillate(HTML5)</a><br /></p>
-		<p><a href="shine.html" style="font-size:1.5em;color:grey;">shine(HTML5)</a><br /></p>
-		<p><a href="bubble.html" style="font-size:1.5em;color:rgb(0, 153, 255);">Bubbles(Javascript)</a><br /></p>
-		<p><a href="loading.html" style="font-size:1.5em;color:rgb(255, 60, 155);">loading(HTML5)</a><br /></p>
-		<p><a href="snake.html" style="font-size:1.5em;color:#FFB6C1;">snake(HTML5)</a><br /></p>
-		<p><a href="HTML_color.html" style="font-size:1em;color:green;">HTML color</a><br /><br /><br /></p>
+		<p><a rel="external" href="webgl-clouds.html" style="font-size:1.5em;color:#326696;">webgl-clouds(HTML5)</a><br /></p>
+		<p><a rel="external" href="crazy.html" style="font-size:1.5em;color:purple;">crazy-tentacles(HTML5)</a><br /></p>
+		<p><a rel="external" href="Demo1.html" style="font-size:1.5em;color:red;">page-preloading(HTML5)</a><br /></p>
+		<p><a rel="external" href="ball.html" style="font-size:1.5em;color:black;">ball-pool(HTML5)</a><br /></p>
+		<p><a rel="external" href="textillate.html" style="font-size:1.5em;color:white;">textillate(HTML5)</a><br /></p>
+		<p><a rel="external" href="shine.html" style="font-size:1.5em;color:grey;">shine(HTML5)</a><br /></p>
+		<p><a rel="external" href="bubble.html" style="font-size:1.5em;color:rgb(0, 153, 255);">Bubbles(Javascript)</a><br /></p>
+		<p><a rel="external" href="loading.html" style="font-size:1.5em;color:rgb(255, 60, 155);">loading(HTML5)</a><br /></p>
+		<p><a rel="external" href="snake.html" style="font-size:1.5em;color:#FFB6C1;">snake(HTML5)</a><br /></p>
+		<p><a rel="external" href="HTML_color.html" style="font-size:1em;color:green;">HTML color</a><br /><br /><br /></p>
 		<!--Function Link Over-->
 		<!--Personal Info Start-->
 		<p style="font-size:2em;color:grey;"><i>------Contact------</i><br /></p>
@@ -56,22 +57,10 @@
 		<!--Personal Info Over-->
 		<p><a href="Log.html" style="font-size:1em;color:grey;" title="Website Log">Log</a><br /><br /></p>
 		<div id="div-center"></div>
-		<p>
-			<a rel="external" href="https://validator.w3.org/check?uri=referer">
-				<img style="border:0;width:88px;height:31px"
-					src="https://www.w3.org/Icons/valid-xhtml10" 
-					alt="Valid XHTML 1.0 Strict"
-					title="Valid XHTML 1.0 Strict" />
-			</a>
-		</p>		
-		<p>
-			<a rel="external" href="https://jigsaw.w3.org/css-validator/check/referer">
-				<img style="border:0;width:88px;height:31px"
-					src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
-					alt="Valid CSS!"
-					title="Valid CSS!" />
-			</a>
-		</p><p>This page was built with <img src="https://assets-cdn.github.com/images/icons/emoji/unicode/2764.png" alt="heart" title="heart" /> by Yaoze Ye</p><p></p><hr />
+		<p><a rel="external" href="https://validator.w3.org/check?uri=referer"><img style="border:0;width:88px;height:31px" src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" title="Valid XHTML 1.0 Strict" /></a></p>		
+		<p><a rel="external" href="https://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" title="Valid CSS!" /></a></p>
+		<p>This page was built with <img src="https://assets-cdn.github.com/images/icons/emoji/unicode/2764.png" alt="heart" title="heart" /> by Yaoze Ye</p><p></p>
+		<hr />
 <script type="text/javascript">document.write("PixelDepth: " + screen.pixelDepth + "bit");</script><p></p>
 <script type="text/javascript">document.write("BrowserCode: " + navigator.appCodeName);</script><p></p>
 <script type="text/javascript">document.write("BrowserCore: " + navigator.appName);</script><p></p>
@@ -79,6 +68,6 @@
 <script type="text/javascript">document.write("CookieSupport: " + navigator.cookieEnabled);</script><p></p>
 <script type="text/javascript">document.write("OS: " + navigator.appVersion);</script><p></p>
 <script type="text/javascript">document.write("OS Platform: " + navigator.platform);</script><p></p>
-<p id="copyright-white">Copyright &copy; 2018 Yaoze Ye</p>
+<p id="copyright-white">Copyright &copy; 2019 Yaoze Ye</p>
 	</body>
 </html>
