--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<p><a rel="external" href="https://validator.w3.org/check?uri=referer"><img style="border:0;width:88px;height:31px" src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" title="Valid XHTML 1.0 Strict" /></a></p>		
 		<p><a rel="external" href="https://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" title="Valid CSS!" /></a></p>
 		<!--<p>This page was built with /*<img src="https://assets-cdn.github.com/images/icons/emoji/unicode/2764.png" alt="heart" title="heart" />*/heart by Yaoze Ye</p><p></p>-->
-		<p>This page was built with <img draggable="false" alt="❤" title="heart" src="https://s.w.org/images/core/emoji/12.0.0-1/svg/2764.svg" /> by Yaoze Ye</p><p></p>
+		<p>This page was built with <img alt="❤" title="heart" src="https://s.w.org/images/core/emoji/12.0.0-1/svg/2764.svg" /> by Yaoze Ye</p><p></p>
 		<hr />
 <script type="text/javascript">document.write("PixelDepth: " + screen.pixelDepth + "bit");</script><p></p>
 <script type="text/javascript">document.write("BrowserCode: " + navigator.appCodeName);</script><p></p>
