--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 		<p><a rel="external" href="https://github.com/yaozeye" style="" title="GitHub">GitHub</a><br /></p>
 		<p><a rel="external" href="https://twitter.com/xfy_yyz/" style="" title="Twitter">Twitter</a><br /></p>
 		<p><a rel="external"><img src="https://y.gtimg.cn/music/icon/v1/pc/nsvip8.png" alt="LV8" title="LV8" /></a><br /></p>
-		<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="173c047c-b580-460e-9d85-1e28030f8533" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script><p><br /></p>
-		<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="da545540-e511-4c98-ae7e-2ef84a402fbd" data-share-badge-host="https://www.youracclaim.com"></div><script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script><p><br /></p>
+		<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="173c047c-b580-460e-9d85-1e28030f8533" data-share-badge-host="https://www.youracclaim.com"></div>
+		<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="da545540-e511-4c98-ae7e-2ef84a402fbd" data-share-badge-host="https://www.youracclaim.com"></div><p><br /></p>
 		<p><a href="mailto:yaozeye@outlook.com" style="text-decoration:none;" title="Email"><input type="button" value="Email" onclick="alert('yaozeye@foxmail.com; yaozeye@outlook.com; yaozeye@yahoo.co.jp;')"></input></a><br /><br /><br /></p>
 		<!--Personal Info Over-->
 		<p><a href="Log.html" style="font-size:1em;color:grey;" title="Website Log">Log</a><br /><br /></p>
@@ -67,6 +67,7 @@
 		<!--<p>This page was built with /*<img src="https://assets-cdn.github.com/images/icons/emoji/unicode/2764.png" alt="heart" title="heart" />*/heart by Yaoze Ye</p><p></p>-->
 		<p>This page was built with <img alt="❤" title="heart" src="https://s.w.org/images/core/emoji/12.0.0-1/svg/2764.svg" /> by Yaoze Ye</p><p></p>
 		<hr />
+<script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
 <script type="text/javascript">document.write("PixelDepth: " + screen.pixelDepth + "bit");</script><p></p>
 <script type="text/javascript">document.write("BrowserCode: " + navigator.appCodeName);</script><p></p>
 <script type="text/javascript">document.write("BrowserCore: " + navigator.appName);</script><p></p>
