--- a/Log.html
+++ b/Log.html
@@ -16,7 +16,7 @@ iframe#h5logo {overflow:auto; width:512px; height:512px; }
 	</head>
 	<body><p><a href="index.html" style="text-decoration:none;font-size:30px;color:#FFFF00;text-shadow: 5px 4px 6px #0000FF;"><b>HOMEPAGE</b></a></p>
 		<p style="font-size:40px;color:white;text-shadow: 1px 15px 45px #FFFFFF;">Website History</p><p></p>
-		<p>Last Updated On 2019-12-31 (YYYY-MM-DD):<br />❤<br /><br /><br /></p>
+		<p>Last Updated On 28 June 2020:<br />❤<br /><br /><br /></p>
 		<h1>2017</h1>
 		<p><br />10/04-10/05 (MM/DD)<br />The first mod of this site.<br />with	"<br />YaozeYE Personal Page<br />crazy-tentacles(HTML5) <br />page-preloading1(HTML5) <br />page-preloading2(HTML5) <br />ball-pool(HTML5) <br />textillate(HTML5) <br />shine(HTML5) <br />HTML_color <br /><br />GitHub <br />Twitter <br />Tencent QQ <br />Email  <br />"<br /><br /></p>
 		<p>10/06<br />Add	"<br />Bubbles(Javascript) <br />loading(HTML5) <br />snake(HTML5)<br />"<br />Change Github image<br />from<br />420x420px (Internet github.com)<br />to <br />200x200px (local)<br /><br />separate the loading canvas of Homepage<br />to<br />loading(HTML5)<br /><br /></p>
@@ -30,9 +30,20 @@ iframe#h5logo {overflow:auto; width:512px; height:512px; }
 		<p>11/08<br />site-wide HTTPS supported<br />external domain *.js removed<br />bubble instruction improved<br />Cache-Control no-siteapp added to all *.html files<br />HTML_color hexadecimal color display name all changed from lowercase to upper-case<br />added keywords to index<br />Demo1 and Demo2 Chinese characters changed to English words<br />Demo series code optimized<br />bubble keywords removed<br />slidetounlock code fixed and improved<br /><br />
 		<p>11/10<br />That's incredible that I have updated the 1111 theme...<br /><br /></p>
 		<p>11/11<br />That's incredible that I have improved the 1111 theme...<br />favicon added<br />keywords removed<br />iisstart image get from Pic Bed ( https://sm.ms/ )<br />1111 theme removed<br /><br /></p>
-		<p>11/12<br />music page "text fixed<br />song and artist names displayed when iframe is invalid<br />6 more songs available<br />previous songs ( iframe only ) have been proved to be inaudible for unknown reasons<br />iframe width adjusted<br />layout adjusted<br />html file grammar revised<br />"<br /><br /><br /></p><p>11/13<br />music.html notice updated<br />unavailable songs removed<br /><br /><br /></p><p>11/14<br />1 more song added<br /><br /><br /></p><p>11/15<br />index code optimized<br /><br /><br /></p><p>11/16<br />Log.html xhtml strict standard referer removed<br /><br /></p>
-		<p>11/18<br />Log.html svg modified<br />website code optimized<br />index font changed<br />index small-caps added<br /><br /><br /></p><p>11/19<br />webgl-clouds(html5) added<br />css available now<br />index data unit changed from 'px' to 'em'<br />Today's update may reduce 0.01ms-500ms loading time.<br />music! the first step of 'Weekly Music'<br /><br /><br /></p><p>11/25<br />Weekly Music Updated ( Nov.26 - Dec.02 )<br /><br /><br /></p><p>11/27<br />weekly music redirect page optimized<br /><br /><br /></p><p>11/30<br />index december welcome words added<br />css simplified, index code simplified<br /><br /><br /></p><p>12/02<br />weekly music updated<br /><br /></p>
-		<p>12/09<br />weekly music updated<br /><br /><br /></p><p>12/11<br />css simplified<br /><br /><br /></p><p>12/12<br />css improved<br />site-wide compatibility improved ( for IE browser version below Internet Explorer 10)<br />Log code simplified<br />font revised<br />background color changed from #EE82EE to #4B9EFF<br /><br /><br /></p>
+		<p>11/12<br />music page "text fixed<br />song and artist names displayed when iframe is invalid<br />6 more songs available<br />previous songs ( iframe only ) have been proved to be inaudible for unknown reasons<br />iframe width adjusted<br />layout adjusted<br />html file grammar revised<br />"<br /><br /><br /></p>
+		<p>11/13<br />music.html notice updated<br />unavailable songs removed<br /><br /><br /></p>
+		<p>11/14<br />1 more song added<br /><br /><br /></p>
+		<p>11/15<br />index code optimized<br /><br /><br /></p>
+		<p>11/16<br />Log.html xhtml strict standard referer removed<br /><br /></p>
+		<p>11/18<br />Log.html svg modified<br />website code optimized<br />index font changed<br />index small-caps added<br /><br /><br /></p>
+		<p>11/19<br />webgl-clouds(html5) added<br />css available now<br />index data unit changed from 'px' to 'em'<br />Today's update may reduce 0.01ms-500ms loading time.<br />music! the first step of 'Weekly Music'<br /><br /><br /></p>
+		<p>11/25<br />Weekly Music Updated ( Nov.26 - Dec.02 )<br /><br /><br /></p>
+		<p>11/27<br />weekly music redirect page optimized<br /><br /><br /></p>
+		<p>11/30<br />index december welcome words added<br />css simplified, index code simplified<br /><br /><br /></p>
+		<p>12/02<br />weekly music updated<br /><br /></p>
+		<p>12/09<br />weekly music updated<br /><br /><br /></p>
+		<p>12/11<br />css simplified<br /><br /><br /></p>
+		<p>12/12<br />css improved<br />site-wide compatibility improved ( for IE browser version below Internet Explorer 10)<br />Log code simplified<br />font revised<br />background color changed from #EE82EE to #4B9EFF<br /><br /><br /></p>
 		<p>12/16<br />weekly music updated<br />partly optimized for w3 standard<br /><br /></p>
 		<p>12/17<br />study content added<br />optimized<br /><br /></p>
 		<p>12/20<br />optimized<br /><br /></p>
@@ -59,7 +70,9 @@ iframe#h5logo {overflow:auto; width:512px; height:512px; }
 		<p><br />07/24<br />index code slightly simplified<br /><br /></p>
 		<p><br />07/26<br />index optimised<br />Log text revised<br /><br /></p>
 		<p><br />07/26<br />videosub added<br />iframe external video player pages added (experimental)<br /><br /></p>
-		<p><br />12/31<br />index 2020<br />css font modification<br /><br /></p>
+		<p><br />12/31<br />index 2020<br />css font modification<br /><br /><br /><br /></p>
+		<h1>2020</h1>
+		<p><br />06/28<br />index theme changed<br />index MOS, MCT badge added<br />index video links removed<br />font changed<br /><br /></p>
 		<p><br /><br /><br /><br /></p>
 		<iframe id="h5logo" src="svg/h5logo.svg"></iframe><p></p>
 		<iframe id="earth" src="svg/earthasia.svg"></iframe><p></p>
@@ -67,6 +80,6 @@ iframe#h5logo {overflow:auto; width:512px; height:512px; }
 <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" />
 <img style="border:0;width:88px;height:31px" src="https://www.w3.org/Icons/valid-svg11" alt="Valid SVG!" />
 </a></p>
-		<p>Copyright &copy; 2019 Yaoze Ye</p>	
+		<p>Copyright &copy; 2020 Yaoze Ye</p>	
 	</body>
 </html>
