--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-		<meta http-equiv="Content-Language" content="en-us" />
+		<meta http-equiv="Content-Language" content="en-gb" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta http-equiv="imagetoolbar" content="false" />
 		<meta name="description" content="Yaoze Ye Personal Website." />
@@ -54,8 +54,8 @@
 		<!--Personal Info Start-->
 		<p style="font-size:2em;color:grey;"><i>------Contact------</i><br /></p>
 		<p><a rel="external" href="https://github.com/yaozeye" style="" title="GitHub">GitHub</a><br /></p>
-		<p><a rel="external" href="https://twitter.com/xfy_yyz/" style="" title="Twitter">Twitter</a><br /></p>
-		<p><img src="https://y.gtimg.cn/music/icon/v1/pc/nsvip8.png" alt="LV8" title="LV8" /><br /></p>
+		<p><a rel="external" href="https://twitter.com/xfy_yyz" style="" title="Twitter">Twitter</a><br /></p>
+		<p><a rel="external" href="https://t.me/yaozeye" style=""><img src="https://telegram.org/img/t_logo.png" alt="Telegram" title="Telegram" /></a><br /></p>
 		<p><a rel="external" href="https://www.youracclaim.com/badges/5f540e8a-3aaf-40e8-9a11-356e3b58ed94/embedded" style=""><img src="https://images.youracclaim.com/images/c325c7c0-5fa6-4e59-be29-cd13c9417549/MCT-Microsoft%2BCertified%2BTrainer.png" alt="Microsoft Certified Trainer" title="Microsoft Certified Trainer" /></a><br /></p>
 		<p><a rel="external" href="https://www.youracclaim.com/badges/6cec430d-178d-443a-b341-2dd140f8f387/embedded" style=""><img src="https://images.youracclaim.com/images/e008e328-6159-4b0a-9b76-f43df283738b/MOS_Master.png" alt="Microsoft Office Master" title="Microsoft Office Master" /></a><br /></p>
 		<p><a rel="external" href="https://www.youracclaim.com/badges/173c047c-b580-460e-9d85-1e28030f8533/embedded" style=""><img src="https://images.youracclaim.com/size/680x680/images/16bc9e00-43a7-421c-a775-a990fbc590ac/MOS_Word.png" alt="Microsoft Office Specialist Word" title="Microsoft Office Specialist Word" /></a><br /></p>
