--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
 		<p><a href="weeklymusic.html" style="text-decoration:none;" rel="external"><input id="h-caps-red" type="button" value="Music"></input></a><br /></p>
 		<!--Function Link-->
 		<p style="font-size:2em;color:grey;"><i>------Function Module------</i><br /></p>
-<!--		<p><a href="videosub/turbodismount.html" style="font-size:1.5em;color:#00FFFF;" rel="external">Turbo Dismount Embed Video Test</a><br /></p>
-		<p><a href="videosub/qqmusicmver9.html" style="font-size:1.5em;color:#00A1D6;" rel="external">QQ Music Mobile (TME) Ver9.0 Early Access</a><br /></p>
-		<p><a href="videosub/ja1_vocab_01.html" style="font-size:1.5em;color:#00A1D6;" rel="external">Japanese Vocabuly 01 (test)</a><br /></p>
-		<p><a href="Physics301-1619.html" style="font-size:1.5em;color:#00A1D6;" rel="external">physics301-1619-aki-review-1st-video</a><br /></p>
--->		<p><a href="page-loading-effects/index.html" style="font-size:1.5em;color:#1212BD;" rel="external">page-loading-effects(HTML5)</a><br /></p>
+		<p><a href="page-loading-effects/index.html" style="font-size:1.5em;color:#1212BD;" rel="external">page-loading-effects(HTML5)</a><br /></p>
 		<p><a href="grid-effect/index.html" style="font-size:1.5em;color:#3498DB;" rel="external">grid-effect(HTML5)</a><br /></p>
 		<p><a href="number-progress/index.html" style="font-size:1.5em;color:#176785;" rel="external">number-progress(HTML5)</a><br /></p>
 		
@@ -50,12 +46,10 @@
 		<p><a rel="external" href="loading.html" style="font-size:1.5em;color:rgb(255, 60, 155);">loading(HTML5)</a><br /></p>
 		<p><a rel="external" href="snake.html" style="font-size:1.5em;color:#FFB6C1;">snake(HTML5)</a><br /></p>
 		<p><a rel="external" href="HTML_color.html" style="font-size:1em;color:green;">HTML color</a><br /><br /><br /></p>
-		<!--Function Link Over-->
-		<!--Personal Info Start-->
+		<!--Function Link Ending-->
+		<!--Personal Info-->
 		<p style="font-size:2em;color:grey;"><i>------Contact------</i><br /></p>
 		<p><a rel="external" href="https://github.com/yaozeye" style="" title="GitHub">GitHub</a><br /></p>
-		<p><a rel="external" href="https://twitter.com/xfy_yyz" style="" title="Twitter">Twitter</a><br /></p>
-		<p><a rel="external" href="https://t.me/yaozeye" style="">Telegram<!--<img src="https://telegram.org/img/t_logo.png" alt="Telegram" title="Telegram" />--></a><br /></p>
 		<p><a rel="external" href="https://www.youracclaim.com/badges/7d2a48dc-9446-4eda-a455-40f123422b4b/embedded" style=""><img src="https://images.youracclaim.com/size/680x680/images/a6ea4416-4f34-4a85-bc24-eb3fe32fd241/MCT-Microsoft_Certified_Trainer-600x600.png" alt="Microsoft Certified Trainer" title="Microsoft Certified Trainer" /></a><br /></p>
 		<p><a rel="external" href="https://www.youracclaim.com/badges/5f540e8a-3aaf-40e8-9a11-356e3b58ed94/embedded" style=""><img src="https://images.youracclaim.com/images/c325c7c0-5fa6-4e59-be29-cd13c9417549/MCT-Microsoft%2BCertified%2BTrainer.png" alt="Microsoft Certified Trainer" title="Microsoft Certified Trainer" /></a><br /></p>
 		<p><a rel="external" href="https://www.youracclaim.com/badges/6cec430d-178d-443a-b341-2dd140f8f387/embedded" style=""><img src="https://images.youracclaim.com/images/e008e328-6159-4b0a-9b76-f43df283738b/MOS_Master.png" alt="Microsoft Office Master" title="Microsoft Office Master" /></a><br /></p>
@@ -63,13 +57,12 @@
 		<p><a rel="external" href="https://www.youracclaim.com/badges/da545540-e511-4c98-ae7e-2ef84a402fbd/embedded" style=""><img src="https://images.youracclaim.com/size/680x680/images/b4fbd3ac-b964-4eaf-ac28-a286964ec49e/MOS_PowerPoint.png" alt="Microsoft Office Specialist PowerPoint" title="Microsoft Office Specialist PowerPoint" /></a><br /></p>
 		<p><a rel="external" href="https://www.youracclaim.com/badges/7ac76f20-c146-48b4-bb49-848d4faaf670/embedded" style=""><img src="https://images.youracclaim.com/images/73f09dc0-9a25-411f-99aa-c12cc898928f/MOS_Excel_Expert6.png" alt="Microsoft Office Specialist Excel Expert" title="Microsoft Office Specialist Excel Expert" /></a><br /></p>
 <!--		<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="da545540-e511-4c98-ae7e-2ef84a402fbd" data-share-badge-host="https://www.youracclaim.com"></div><p><br /></p>
--->		<p><a href="mailto:yaozeye@outlook.com" style="text-decoration:none;" title="Email"><input type="button" value="Email" onclick="alert('yaozeye@foxmail.com; yaozeye@outlook.com; yaozeye@yahoo.co.jp;')"></input></a><br /><br /><br /></p>
-		<!--Personal Info Over-->
+-->		<p><a href="mailto:yaozeye@outlook.com" style="text-decoration:none;" title="Email"><input type="button" value="Email" onclick="alert('yaozeye@outlook.com; ')"></input></a><br /><br /><br /></p>
+		<!--Personal Info Ending-->
 		<p><a href="Log.html" style="font-size:1em;color:grey;" title="Website Log">Log</a><br /><br /></p>
 		<div id="div-center"></div>
 		<p><a rel="external" href="https://validator.w3.org/check?uri=referer"><img style="border:0;width:88px;height:31px" src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" title="Valid XHTML 1.0 Strict" /></a></p>		
 		<p><a rel="external" href="https://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" title="Valid CSS!" /></a></p>
-		<!--<p>This page was built with /*<img src="https://assets-cdn.github.com/images/icons/emoji/unicode/2764.png" alt="heart" title="heart" />*/heart by Yaoze Ye</p><p></p>-->
 		<p>This page was built with <img alt="❤" title="heart" src="https://s.w.org/images/core/emoji/12.0.0-1/svg/2764.svg" /> by Yaoze Ye</p><p></p>
 		<hr />
 <!--<script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>-->
